# cbc-commons

./: .gitignore  DESIGN-SYSTEM.md  FRONTEND-READY.md  PROJECT-STATUS.md  README.md  backend-integration-plan.md  blockchain-portfolio-template.md  next.config.ts  prepare-commits.sh
app/: layout.tsx  page.tsx  providers.tsx
app/swap/: page.tsx
app/transactions/: page.tsx
brb-frontend/: README.md  package-lock.json  package.json
brb-frontend/app/: layout.tsx  page.tsx  providers.tsx
brb-frontend/app/login/: page.tsx
brb-frontend/app/transactions/: page.tsx
brb-frontend/components/: BalanceCard.tsx  MintBurnCard.tsx  Navbar.tsx  TreasuryStats.tsx
brb-frontend/hooks/: useCornellBRB.ts  useTreasury.ts
brb-frontend/utils/: sessionStorage.ts
brb-stablecoin/: .dockerignore  .gitignore  Anchor.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  mint-demo.js  package-lock.json  package.json  run-demo.sh  tsconfig.json
brb-stablecoin/cli/: treasury-cli.js
brb-stablecoin/examples/: basic-usage.js
brb-stablecoin/migrations/: deploy.js
brb-stablecoin/programs/brb-treasury/: Cargo.toml
brb-stablecoin/programs/brb-treasury/src/: lib.rs
brb-stablecoin/tests/: brb-treasury.ts
commons-backend/: HOW-TO-USE.md  README.md  package-lock.json  package.json  server.js  test-api.js
commons-backend/routes/: auth.js  balance.js  transactions.js
commons-backend/services/: getService.js
components/: BalanceCard.tsx  MintBurnCard.tsx  Navbar.tsx  TreasuryStats.tsx
hooks/: useTreasury.ts
